# aff4-cpp-lite

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  flake.nix  libaff4.pc.in  shell.nix
docs/: .gitignore  Doxyfile.in  Makefile.am
examples/: Makefile.am  digest.cc  extract.cc  info.cc  utils.cc  utils.h
nix/: aff4-cpp-lite.nix
src/: AFF4Containers.cc  AFF4Containers.h  AFF4Defaults.h  AFF4Lexicon.cc  AFF4Lexicon.h  Makefile.am  RDFValue.cc  aff4-c.cc  aff4-c.h  aff4.cc  aff4.rc
src/codec/: CompressionCodec.cc  CompressionCodec.h  DeflateCompression.cc  DeflateCompression.h  LZ4Compression.cc  LZ4Compression.h  NullCompression.cc  NullCompression.h  SnappyCompression.cc  SnappyCompression.h  ZlibCompression.cc  ZlibCompression.h
src/container/: AFF4ZipContainer.cc  AFF4ZipContainer.h
src/image/: AFF4Image.cc  AFF4Image.h
src/map/: AFF4Map.cc  AFF4Map.h
src/rdf/: Model.cc  Model.h
src/resolver/: LightResolver.cc  LightResolver.h
src/resource/: AFF4Resource.cc  AFF4Resource.h
src/stream/: ImageStream.cc  ImageStream.h  ImageStreamFactory.cc  ImageStreamFactory.h  MapStream.cc  MapStream.h  RepeatedImageStream.cc  RepeatedImageStream.h  SymbolicImageStream.cc  SymbolicImageStream.h
src/stream/struct/: BevvyIndex.cc  BevvyIndex.h  BevvyIndexLoader.cc  BevvyIndexLoader.h  ChunkLoader.cc  ChunkLoader.h  ImageStreamPoint.h  MapEntryPoint.h
src/utils/: Cache.h  FileUtil.h  PortableEndian.h  StringUtil.cc  StringUtil.h
src/zip/: Zip.cc  Zip.h  ZipStream.cc  ZipStream.h
tests/: Makefile.am  TestRunner.cc  TestUtilities.cc  TestUtilities.h  cacheTest.cc  cacheTest.h  compression.cc  compression.h  container.cc  container.h  image.cc  image.h  resolver.cc  resolver.h  streams.cc  streams.h  version.cc  version.h
tests/resources/: Micro7.001.aff4  README.txt
win32/: .gitignore  INSTALL.txt  Package.txt  build.cmd  libaff4.sln  package.cmd  packageXways.cmd  xways.txt
win32/aff4-digest/: Resource.rc  aff4-digest.vcxproj  aff4-digest.vcxproj.filters  stdafx.cpp
win32/aff4-extract/: Resource.rc  aff4-extract.vcxproj  aff4-extract.vcxproj.filters  packages.config  stdafx.cpp
win32/aff4-info/: Resource.rc  aff4-info.vcxproj  aff4-info.vcxproj.filters  stdafx.cpp  stdafx.h
win32/libaff4/: aff4config.h  libaff4.rc  libaff4.vcxproj  libaff4.vcxproj.filters  packages.config  resource.h
win32/libaff4/src/: dllmain.cc  stdafx.h  targetver.h
win32/raptor2/: raptor2.rc  raptor2.vcxproj  raptor2.vcxproj.filters  resource.h
win32/raptor2/src/: raptor_config.h  raptor_internal.h  raptor_parse.c  raptor_serialize.c  raptor_win32.c  turtle_lexer.h
win32/snappy/: snappy.rc  snappy.vcxproj  snappy.vcxproj.filters
win32/snappy/src/: snappy-stubs-internal.h  snappy.h
win32/unitTests/: stdafx.cpp  stdafx.h  unitTests.vcxproj  unitTests.vcxproj.filters  version.cpp
win32/xwaysPlugin/: ReadMe.txt  Resource.rc  Util.cc  Util.h  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h  xwaysPlugin.cc  xwaysPlugin.h  xwaysPlugin.vcxproj  xwaysPlugin.vcxproj.filters
win32/xwaysPluginUnitTest/: stdafx.h  targetver.h  unittest.cc  xwaysPluginUnitTest.vcxproj  xwaysPluginUnitTest.vcxproj.filters
win32/zlib/: .gitignore  zlib.vcxproj  zlib.vcxproj.filters  zlib1.rc
